--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,8 +9,7 @@ phases:
                                 # create the aws dir
                         - mkdir -p ~/.aws/
                         # create fake credential file
-                        - echo "[default]\naws_access_key_id = FakeKey\naws_secret_key = FakeKey\naws_session_token = FakeKey"\
-                                 >/.aws/credentials
+                        - echo "[default]\naws_access_key_id = FakeKey\naws_secret_access_key = FakeKey\naws_session_token = FakeKey" >~/.aws/credentials
 
 
         build:
