--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,8 +16,7 @@ phases:
                 commands: 
                         - echo "Run lint and test"
                         - make lint
+                        - PYTHONPATH=".";make test
         post_build:
                 commands:
-                        - echo "COPY Code TO S3"
-                        - rm -rf ~/.aws
-                        - aws s3 sync $CODEBUILD_SRC_DIR s3://aws-pragai/master --delete
+                        - echo Build completed on 'data'  
